# Abstract

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_clerk_user_id.py  0003_drop_rls.py  0004_hardening_state.py  0005_base_packages_installed.py  0006_projects.py  0007_nginx_installed.py  0008_env_run_publish.py  0009_project_is_deleting.py  0010_project_runs_and_active_operation.py  0011_app_ssh_key_per_server.py  0012_server_active_operation.py  0013_server_key_installed.py  0014_reregistration_state.py
backend/app/: clerk.py  config.py  db.py  logging_config.py  main.py  redis_client.py
backend/app/models/: __init__.py  app_ssh_key.py  project.py  project_deploy_key.py  project_env_file.py  project_run.py  server.py  user.py
backend/scripts/: seed_dev_user.py
backend/tests/: conftest.py  project_mocks.py  run_publish_mocks.py  test_app_key_service.py  test_auth.py  test_env_file_service.py  test_github_service.py  test_hardening_service.py  test_key_provider.py  test_ownership.py  test_project_service.py  test_publish_service.py  test_routes_env_files.py  test_routes_hardening.py  test_routes_project_runs.py  test_routes_projects.py  test_routes_projects_delete.py  test_routes_projects_publish.py  test_routes_projects_run.py  test_routes_servers.py  test_routes_servers_cancel.py  test_routes_servers_delete.py  test_routes_servers_reregister.py  test_run_service.py  test_server_reregistration_service.py  test_ssh_service_mocked.py
(+91 files in other folders)
